--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2085,7 +2085,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #db05ad;
+  background: #ff9c37;
 }
 .links-of-blogroll {
   font-size: 13px;
