--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2085,7 +2085,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #cb799e;
+  background: #2d83ff;
 }
 .links-of-blogroll {
   font-size: 13px;
