--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2208,7 +2208,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #c7ffc8;
+  background: #e0ff9f;
 }
 .links-of-blogroll {
   font-size: 13px;
